[package]
name = "kahuna"
version = "0.3.0"
authors = ["Liam Taylor <liam.tab@gail.com>"]
description = "A basic implementation of wave-function collapse for procedural generation"
repository = "https://github.com/OutOfTheVoid/kahuna"
homepage = "https://github.com/OutOfTheVoid/kahuna"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
keywords = ["gamedev", "procgen", "wave", "function", "collapse"]
categories = ["algorithms", "mathematics", "game-development"]
exclude = [
    "Cargo.lock",
    "target",
    "procedural_texture.png",
    ".vscode"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
image = "0.24.2"